# algotrading_1

./: pyproject.toml
src/algotrading_1/nb/: initial_project.ipynb
