[project]
name = "algotrading-1"
version = "0.1.0"
description = ""
authors = [
    {name = "Renato Magalhães",email = "renato.n.magalhaes@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas (>=2.3.3,<3.0.0)",
    "mplfinance (>=0.12.10b0,<0.13.0)",
    "pydantic (>=2.12.5,<3.0.0)",
    "numpy (>=2.4.0,<3.0.0)",
    "matplotlib (>=3.10.8,<4.0.0)"
]

[tool.poetry]
packages = [{include = "algotrading_1", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "ipykernel (>=7.1.0,<8.0.0)"
]
